--- a/Supplementary_Notebook.ipynb
+++ b/Supplementary_Notebook.ipynb
@@ -2,23 +2,21 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "2262ac65",
+   "metadata": {},
    "source": [
     "# PROJECT: Modeling Magnetic Resonance using QuTiP\n",
     "### **Maastricht Science Programme, Project Period January 2022**\n",
     "### **Supplementary Notebook**"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "552d9023",
+   "metadata": {},
    "source": [
     "## Table of Contents"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
@@ -47,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "29c3bc2c",
    "metadata": {},
    "outputs": [],
@@ -81,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "bee475cf",
    "metadata": {},
    "outputs": [],
@@ -104,14 +102,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "5df7e643",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2dd41cc41e0e4beba27d6d39ede2dcf9",
+       "model_id": "7ab64a19ec08415196a7c196791c87bf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -128,7 +126,7 @@
        "<function __main__.radial_function(n, l=0)>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "b7a9c6ce",
    "metadata": {},
    "outputs": [],
@@ -182,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "73f77e1a",
    "metadata": {},
    "outputs": [],
@@ -194,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "277509ff",
    "metadata": {},
    "outputs": [
@@ -208,7 +206,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3f0eaa33e4c244e2b920ea8f8f3f86e7",
+       "model_id": "d4f772dfbf104309986a683b74bf5e8f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -225,7 +223,7 @@
        "<function __main__.Quantum_number(yn, ym)>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "293ec263",
    "metadata": {},
    "outputs": [
@@ -301,18 +299,18 @@
      "output_type": "stream",
      "text": [
       "What should the maximum field strength along the z-axis be?\n",
-      "Bz = 5\n"
+      "Bz = 6\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5d0bd35444db406f919ed1e37dc7e66c",
+       "model_id": "0008d5b339ee460a91ffa23e2d0f9f6f",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(FloatSlider(value=2.0, description='Bz', max=5.0, step=1.0), Output()), _dom_classes=('w…"
+       "interactive(children=(FloatSlider(value=3.0, description='Bz', max=6.0, step=1.0), Output()), _dom_classes=('w…"
       ]
      },
      "metadata": {},
@@ -324,7 +322,7 @@
        "<function __main__.magneticfield_z(Bz)>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "006d1a9d",
    "metadata": {},
    "outputs": [
@@ -367,20 +365,20 @@
      "output_type": "stream",
      "text": [
       "What should the maximum field strength along the x-axis be?\n",
-      "Bx = 6\n",
+      "Bx = 5\n",
       "What should the maximum of the angular frequency be?\n",
-      "The angular frequency is: 8\n"
+      "The angular frequency is: 10\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5a2f0b4de8a042c48c962c04c096f39d",
+       "model_id": "00cdd746d63844aab8e8c97e9970c203",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(FloatSlider(value=4.0, description='Bx', max=6.0, step=1.0), FloatSlider(value=4.0, desc…"
+       "interactive(children=(FloatSlider(value=4.0, description='Bx', max=5.0, step=1.0), FloatSlider(value=4.0, desc…"
       ]
      },
      "metadata": {},
@@ -392,7 +390,7 @@
        "<function __main__.plot(Bx=4.0, w=4.0, t=0.0)>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,7 +414,7 @@
     "    x = np.linspace(0, 2 * np.pi, 100)\n",
     "    B_x = 0\n",
     "\n",
-    "    B_x = C * np.cos(x + w * t)  \n",
+    "    B_x = Bx * np.cos(x + w * t)  \n",
     "    line_plotted.set_data((x, B_x))\n",
     "\n",
     "\n",
@@ -425,7 +423,7 @@
     "\n",
     "# w = increments of half pi\n",
     "# click on loop button to loop over time otherwise it lasts 30 sec\n",
-    "widgets.interact(plot, Bx=(0.0, C, 1.0), w=(0.0, D, np.pi / 2), t=widgets.Play(min=0.0, max=30.0))"
+    "widgets.interact(plot, Bx=(0.0, C, 1.0), w=(np.pi/2, D, np.pi / 2), t=widgets.Play(min=0.0, max=30.0))"
    ]
   },
   {
@@ -440,14 +438,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "id": "bc2c5811",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cdf106febde34b01b2d1b3ecc5c4abee",
+       "model_id": "a7138b1e5bcd4481bcabc3cd8175a9d0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -464,7 +462,7 @@
        "<function __main__.plot_3D(Bx, w, Bz, t)>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -507,8 +505,16 @@
     "    plt.show()\n",
     "    \n",
     "    \n",
-    "widgets.interact(plot_3D, Bx=(0.0, 10, 1.0), w=(0.0, 10, np.pi / 2), Bz=(0.0, 10, 1.0), t=widgets.Play(min=0.0, max=30.0))"
+    "widgets.interact(plot_3D, Bx=(0.0, 10, 1.0), w=(np.pi/2, 10, np.pi / 2), Bz=(0.0, 10, 1.0), t=widgets.Play(min=0.0, max=30.0))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6283d327",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
